[metadata]
name = forge
version = 2018.01
long_description = file: README.rst
author = Devin Fee
author_email = devin@devinfee.com
url = http://github.com/dfee/forge
description =  forge (python) signatures for fun and profit
license = MIT
keywords =
    signatures
    parameters
    arguments
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
packages = forge
python_requires = >= 3.6.0

[options.extras_require]
testing =
    pytest