[metadata]
name = python-forge
version = 18.5.0
long_description = file: README.rst
author = Devin Fee
author_email = devin@devinfee.com
url = http://github.com/dfee/forge
description =  forge (python) signatures for fun and profit
license = MIT
keywords =
    signatures
    parameters
    arguments
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = forge

[options.extras_require]
dev =
    coverage
    mypy
    pylint
    pytest
    sphinx
    sphinx-autodoc-typehints
    sphinx_paramlinks
docs =
    sphinx >= 1.7.4
    docutils
    requests
    sphinx_autodoc_typehints
    sphinx_paramlinks
testing =
    coverage
    mypy
    pylint
    pytest

[bdist_wheel]
python-tag = py36